# bitr

./: Cargo.toml  README.md
docs/: book.toml
docs/book/: 404.html  bitr.html  changelog.html  contributing.html  overview.html  print.html  quickstart.html  searchindex.js  searchindex.json
docs/book/syntax/: casting.html  display.html  gates.html  input.html  syntax.html  variables.html
docs/src/: SUMMARY.md  bitr.md  changelog.md  contributing.md  overview.md  quickstart.md
docs/src/syntax/: casting.md  display.md  functions.md  gates.md  input.md  syntax.md  variables.md
examples/: add-function.bs  eight-bit-adder.bs  looping.bs
src/: lang.rs  lib.rs  main.rs  repl.rs  script.rs  status.rs  utils.rs
src/run/: assign.rs  eval.rs  gates.rs  gets.rs  input.rs  mod.rs  run.rs
