[package]
name = "bitr"
version = "0.1.0"
authors = ["Siriusmart <siriusmart@tuta.io>"]
description = "A minimal BitScript interpreter."
homepage = "https://siriusmart.github.io/bitscript"
repository = "https://github.com/siriusmart/bitr"
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2021"
keywords = ["bitscript", "bit", "logic gates", "language", "simulator"]
categories = ["simulation"]
exclude = ["/docs", "/LICENSE", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
